--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -62,6 +62,12 @@
   font-weight:500;
 }
 
+.linkedIn{
+  color: inherit;
+  text-decoration: none;
+
+}
+
 .hamburger{
   width:32px;
   height: 25px;
