--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -57,3 +57,30 @@ font-size: 30px;
   width: 30px;
   /* animation: arrowBlink 2s infinate; */
 }
+@media (max-width: 500px) {
+  .intro {
+    flex-direction:column;
+    align-items: center;
+  }
+  .imgContainer {
+    align-items: flex-start;
+    margin-top: 20px;
+  }
+  .headShot {
+    height: 50%;
+    width: 40%;
+  }
+  .introWrapper {
+    padding-left: 0;
+    align-items: center;
+  }
+  #introH1 {
+    font-size: 40px;
+  }
+  #introH3 {
+    font-size: 20px;
+  }
+}
+/* @media (max-width: 500px) {
+
+} */
