change font size for descriptions

--- a/src/components/testimonials/testimonials.css
+++ b/src/components/testimonials/testimonials.css
@@ -66,6 +66,7 @@
   padding: 10px;
   border-radius: 10px;
   background-color: rgb(250, 244, 245);
+  font-size:12px
 }
 .cardBottom {
   display: flex;
